add comments to Ensemble Colab.ipynb

--- a/Ensemble Colab.ipynb
+++ b/Ensemble Colab.ipynb
@@ -26,9 +26,8 @@
     "try:\n",
     "    from google.colab import auth\n",
     "    auth.authenticate_user()\n",
-    "    # in colab ax6/ is not yet in python's path\n",
     "    sys.path.append(os.path.join(os.getcwd(), \"ax6/\"))\n",
-    "except ModuleNotFoundError:  # local execution\n",
+    "except ModuleNotFoundError:\n",
     "    pass\n",
     "\n",
     "from ensemble import Ensemble\n",
@@ -44,6 +43,7 @@
    "source": [
     "BASE_SR = 22050\n",
     "\n",
+    "# this download the 'Cough' trainset for prompts\n",
     "prompt_files = Trainset(keyword=\"Cough\", sr=BASE_SR).download()\n"
    ]
   },
@@ -59,30 +59,38 @@
     "prompts = prompt_files.serve(\n",
     "    (h5m.Input(data='snd', getter=h5m.AsSlice(shift=0, length=BASE_SR)), ),\n",
     "    shuffle=False,\n",
+    "    # batch_size=1 --> new stream for each prompt <> batch_size=8 --> one stream f :\n",
     "    batch_size=8,\n",
     "    sampler=mmk.IndicesSampler(\n",
     "        \n",
     "        # INDICES FOR THE PROMPTS :\n",
-    "        indices=(0, BASE_SR*2, BASE_SR*4)\n",
+    "        indices=(0, BASE_SR*8, BASE_SR*16, BASE_SR*32)\n",
     "))\n",
+    "\n",
+    "# ID of the models can be copied from axx\n",
+    "wavenet_fft_cough = \"80cb7d5b4ff7af169e74b3617c43580a41d5de5bd6c25e3251db2d11213755cd\"\n",
+    "\n",
+    "# THE MODELS PATTERN defines which checkpoint (id, epoch) generates for how long (seconds)\n",
     "\n",
     "stream = Pseq([\n",
     "    Pbind(\n",
-    "        \"id\", \"80cb7d5b4ff7af169e74b3617c43580a41d5de5bd6c25e3251db2d11213755cd\",\n",
+    "        \"id\", wavenet_fft_cough,\n",
     "        \"epoch\", Prand([40, 50], inf),\n",
     "        \"seconds\", Pwhite(lo=1., hi=8., repeats=1)\n",
     "        ),\n",
     "    Pbind(\n",
-    "        \"id\", \"80cb7d5b4ff7af169e74b3617c43580a41d5de5bd6c25e3251db2d11213755cd\",\n",
-    "        \"epoch\", Prand([40, 50], inf),\n",
+    "        \"id\", wavenet_fft_cough,\n",
+    "        \"epoch\", Prand([10, 20], inf),\n",
     "        \"seconds\", Pwhite(lo=0.5, hi=1.5, repeats=1)\n",
     "        ),\n",
     "], inf).asStream()\n",
+    "\n",
     "\n",
     "TOTAL_SECONDS = 60.\n",
     "    \n",
     "ensemble = Ensemble(\n",
     "    TOTAL_SECONDS, BASE_SR, stream,\n",
+    "    # with this you can print the event -- or not\n",
     "    print_events=False\n",
     ")\n",
     "\n",
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd09383",
+   "id": "776ef3cc",
    "metadata": {},
    "outputs": [],
    "source": []
