accelerator gpu to cloab nb

--- a/Ensemble Colab.ipynb
+++ b/Ensemble Colab.ipynb
@@ -59,7 +59,7 @@
     "prompts = prompt_files.serve(\n",
     "    (h5m.Input(data='snd', getter=h5m.AsSlice(shift=0, length=BASE_SR)), ),\n",
     "    shuffle=False,\n",
-    "    # batch_size=1 --> new stream for each prompt <> batch_size=8 --> one stream f :\n",
+    "    # batch_size=1 --> new stream for each prompt <> batch_size=8 --> one stream for 8 prompts :\n",
     "    batch_size=8,\n",
     "    sampler=mmk.IndicesSampler(\n",
     "        \n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776ef3cc",
+   "id": "9432862a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -137,7 +137,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  }
+  },
+  "accelerator": "GPU"
  },
  "nbformat": 4,
  "nbformat_minor": 5
