fix torchaudio version

--- a/Ensemble Colab.ipynb
+++ b/Ensemble Colab.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "!git clone --recurse-submodules https://github.com/ktonal/ax6.git\n",
+    "%pip install torchaudio==0.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html\n",
     "%pip install -e ax6/pypbind ax6/h5mapper ax6/mimikit/"
    ]
   },
@@ -121,6 +122,7 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -137,8 +139,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  },
-  "accelerator": "GPU"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
