--- a/Ensemble Colab.ipynb
+++ b/Ensemble Colab.ipynb
@@ -103,7 +103,7 @@
     "    network=ensemble,\n",
     "    dataloader=prompts,\n",
     "    inputs=(h5m.Input(None, \n",
-    "                      getter=h5m.AsSlice(dim=1, shift=BASE_SR, length=BASE_SR),\n",
+    "                      getter=h5m.AsSlice(dim=1, shift=-BASE_SR, length=BASE_SR),\n",
     "                      setter=h5m.Setter(dim=1)),),\n",
     "    n_steps=int(BASE_SR * ensemble.max_seconds),\n",
     "    add_blank=True,\n",
