update colab nb

--- a/Ensemble Colab.ipynb
+++ b/Ensemble Colab.ipynb
@@ -32,7 +32,9 @@
     "    pass\n",
     "\n",
     "from ensemble import Ensemble\n",
-    "from datasets import Trainset"
+    "from datasets import Trainset\n",
+    "from checkpoints import Checkpoint\n",
+    "from models.nnn import NearestNextNeighbor"
    ]
   },
   {
@@ -45,7 +47,7 @@
     "BASE_SR = 22050\n",
     "\n",
     "# this download the 'Cough' trainset for prompts\n",
-    "prompt_files = Trainset(keyword=\"Cough\", sr=BASE_SR).download()\n"
+    "prompt_files = Trainset(keyword=\"Cough\", sr=BASE_SR).bank\n"
    ]
   },
   {
@@ -61,33 +63,45 @@
     "    (h5m.Input(data='snd', getter=h5m.AsSlice(shift=0, length=BASE_SR)), ),\n",
     "    shuffle=False,\n",
     "    # batch_size=1 --> new stream for each prompt <> batch_size=8 --> one stream for 8 prompts :\n",
-    "    batch_size=8,\n",
+    "    batch_size=1,\n",
     "    sampler=mmk.IndicesSampler(\n",
     "        \n",
     "        # INDICES FOR THE PROMPTS :\n",
-    "        indices=(0, BASE_SR*8, BASE_SR*16, BASE_SR*32)\n",
+    "        indices=(0, BASE_SR*8, BASE_SR*16)\n",
     "))\n",
     "\n",
     "# ID of the models can be copied from axx\n",
     "wavenet_fft_cough = \"80cb7d5b4ff7af169e74b3617c43580a41d5de5bd6c25e3251db2d11213755cd\"\n",
+    "srnn_cough = \"cbba48a801f8b21600818da1362c61aa1287d81793e8cc154771d666956bdcef\"\n",
     "\n",
     "# THE MODELS PATTERN defines which checkpoint (id, epoch) generates for how long (seconds)\n",
     "\n",
     "stream = Pseq([\n",
     "    Pbind(\n",
+    "        \"type\", Checkpoint,\n",
     "        \"id\", wavenet_fft_cough,\n",
     "        \"epoch\", Prand([40, 50], inf),\n",
-    "        \"seconds\", Pwhite(lo=1., hi=8., repeats=1)\n",
+    "        \"seconds\", Pwhite(lo=3., hi=5., repeats=1)\n",
     "        ),\n",
     "    Pbind(\n",
-    "        \"id\", wavenet_fft_cough,\n",
-    "        \"epoch\", Prand([10, 20], inf),\n",
-    "        \"seconds\", Pwhite(lo=0.5, hi=1.5, repeats=1)\n",
+    "        # This event inserts the most similar continuation from the Trainset \"Cough\"\n",
+    "        \"type\", NearestNextNeighbor,\n",
+    "        \"keyword\", \"Cough\",\n",
+    "        \"feature\", mmk.Spectrogram(n_fft=2048, hop_length=512, coordinate=\"mag\"),\n",
+    "        \"seconds\", Pwhite(lo=2., hi=5., repeats=1)\n",
     "        ),\n",
+    "    Pbind(\n",
+    "        \"type\", Checkpoint,\n",
+    "        \"id\", srnn_cough,\n",
+    "        \"epoch\", Prand([200, 300], inf),\n",
+    "        # SampleRNN Checkpoints work best with a temperature parameter :\n",
+    "        \"temperature\", Pwhite(lo=.25, hi=1.5),\n",
+    "        \"seconds\", Pwhite(lo=.5, hi=2.5, repeats=1),\n",
+    "    )\n",
     "], inf).asStream()\n",
     "\n",
     "\n",
-    "TOTAL_SECONDS = 60.\n",
+    "TOTAL_SECONDS = 30.\n",
     "    \n",
     "ensemble = Ensemble(\n",
     "    TOTAL_SECONDS, BASE_SR, stream,\n",
@@ -116,6 +130,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9432862a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(stream)[\"type\"] is Checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ab68608",
    "metadata": {},
    "outputs": [],
    "source": []
