--- a/notebook-Copy1.ipynb
+++ b/notebook-Copy1.ipynb
@@ -13,15 +13,100 @@
     "import torch\n",
     "import os\n",
     "\n",
-    "from models.wavenets import WaveNetFFT\n",
+    "from models.wavenets import WaveNetFFT, WaveNetQx\n",
     "from models.srnns import SampleRNN\n",
-    "from models.s2s import Seq2SeqLSTM\n",
+    "from models.s2s import Seq2SeqLSTM, Seq2SeqLSTMv0\n",
     "from mains import train, generate\n",
     "\n",
-    "from datasets import from_gcloud, INSECTS_X, VERDI_X, COUGH\n",
+    "from datasets import from_gcloud, INSECTS_X, VERDI_X, COUGH, LUNGS\n",
     "\n",
     "if os.path.exists(\"train-2.h5\"):\n",
     "    os.remove(\"train-2.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c37976b6",
+   "metadata": {},
+   "source": [
+    "# SEQ2SEQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5260607f",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from grids import fft_grid, fft_io_grid\n",
+    "\n",
+    "\n",
+    "class GCPSoundBank(h5m.TypedFile):\n",
+    "    snd = from_gcloud(h5m.Sound(sr=22050, mono=True, normalize=True))\n",
+    "    \n",
+    "    \n",
+    "for id_, s in COUGH.items():\n",
+    "#     if id_ != \"Verdi_X_3_bis\":\n",
+    "#         continue\n",
+    "    \n",
+    "    GCPSoundBank.create(f\"train-2.h5\", s, parallelism=\"threads\", n_workers=8)\n",
+    "    soundbank = GCPSoundBank(f\"train-2.h5\", mode='r', keep_open=True)\n",
+    "    \n",
+    "    feature = mmk.Spectrogram(sr=soundbank.snd.attrs[\"sr\"],\n",
+    "                                n_fft=2048, hop_length=512,\n",
+    "                                coordinate='pol',\n",
+    "                                center=False,\n",
+    "                                normalize=True)\n",
+    "\n",
+    "    net = Seq2SeqLSTM(\n",
+    "        feature=feature,\n",
+    "        input_heads=1,\n",
+    "        output_heads=1,\n",
+    "        scaled_activation=True,\n",
+    "        model_dim = 1024,\n",
+    "        num_layers = 1,\n",
+    "        n_lstm = 1,\n",
+    "        bottleneck = \"add\",\n",
+    "        n_fc = 1,\n",
+    "        hop = 4,\n",
+    "        weight_norm=False,\n",
+    "        with_tbptt=False,\n",
+    "        with_sampler=False,\n",
+    "    )\n",
+    "\n",
+    "    train(\n",
+    "        soundbank,\n",
+    "        net,\n",
+    "        input_feature=feature,\n",
+    "        target_feature=feature,\n",
+    "        root_dir=\"./trainings/s2s-cough-pol\",\n",
+    "        batch_size=8,\n",
+    "        batch_length=4,\n",
+    "        shift_error=0,\n",
+    "        downsampling=32,\n",
+    "\n",
+    "        max_epochs=50,\n",
+    "        limit_train_batches=None,\n",
+    "\n",
+    "        max_lr=4e-4,\n",
+    "        betas=(0.9, 0.93),\n",
+    "        div_factor=5.,\n",
+    "        final_div_factor=1.,\n",
+    "        pct_start=0.,\n",
+    "        cycle_momentum=False,\n",
+    "\n",
+    "        CHECKPOINT_TRAINING=False,\n",
+    "        MONITOR_TRAINING=True,\n",
+    "        OUTPUT_TRAINING=\"\",\n",
+    "\n",
+    "        every_n_epochs=10,\n",
+    "        n_examples=4,\n",
+    "        prompt_length=4,\n",
+    "        n_steps=int(12*(net.feature.sr//net.feature.hop_length) // net.hp.hop),\n",
+    "    )"
    ]
   },
   {
@@ -30,6 +115,16 @@
    "metadata": {},
    "source": [
     "# Sample RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8493e4ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "16000*4/512"
    ]
   },
   {
@@ -50,69 +145,60 @@
     "    snd = from_gcloud(h5m.Sound(sr=16000, mono=True, normalize=True))\n",
     "    \n",
     "    \n",
-    "for id_, s in COUGH.items():\n",
-    "    \n",
-    "    GCPSoundBank.create(f\"train-2.h5\", s, parallelism=\"threads\", n_workers=8)\n",
-    "    soundbank = GCPSoundBank(f\"train-2.h5\", mode='r', keep_open=True)\n",
-    "    \n",
-    "    feature = mmk.MuLawSignal(sr=soundbank.snd.attrs[\"sr\"],\n",
-    "                                q_levels=256)\n",
-    "    net = SampleRNN(\n",
-    "        feature=feature,\n",
-    "        chunk_length=16000*8,\n",
-    "        frame_sizes = (16, 8, 8),\n",
-    "        dim= 1024,\n",
-    "        n_rnn = 1,\n",
-    "        q_levels = 256,\n",
-    "        embedding_dim = 256,\n",
-    "        mlp_dim = 1024,\n",
-    "    )\n",
+    "for id_, s in LUNGS.items():\n",
+    "    for lr, betas in [(7e-4, (0.97, 0.995)), (5e-4, (.95, .985))]:\n",
     "\n",
-    "    train(\n",
-    "        soundbank,\n",
-    "        net,\n",
-    "        input_feature=mmk.MultiScale(feature, net.frame_sizes, (*net.frame_sizes[:-1], 1)),\n",
-    "        target_feature=feature,\n",
-    "        root_dir=\"./trainings/srnn-cough\",\n",
-    "        batch_size=32,\n",
-    "        batch_length=512,\n",
-    "        oversampling=1,\n",
-    "        shift_error=0,\n",
-    "        tbptt_len=(16000*8//512),\n",
-    "        max_epochs=100,\n",
-    "        limit_train_batches=8000,\n",
+    "        GCPSoundBank.create(f\"train-2.h5\", s, parallelism=\"threads\", n_workers=8)\n",
+    "        soundbank = GCPSoundBank(f\"train-2.h5\", mode='r', keep_open=True)\n",
     "\n",
-    "        max_lr=5e-4,\n",
-    "        betas=(0.9, 0.99),\n",
-    "        div_factor=5.,\n",
-    "        final_div_factor=1.,\n",
-    "        pct_start=0.,\n",
-    "        cycle_momentum=False,\n",
+    "        feature = mmk.MuLawSignal(sr=soundbank.snd.attrs[\"sr\"],\n",
+    "                                    q_levels=128)\n",
+    "        net = SampleRNN(\n",
+    "            feature=feature,\n",
+    "            chunk_length=2048,\n",
+    "            frame_sizes = (512, 64, 8, 8),\n",
+    "            dim= 512,\n",
+    "            n_rnn = 1,\n",
+    "            q_levels = 128,\n",
+    "            embedding_dim = 256,\n",
+    "            mlp_dim = 512,\n",
+    "        )\n",
+    "        print(\"------------\", lr, betas)\n",
     "\n",
-    "        CHECKPOINT_TRAINING=True,\n",
-    "        MONITOR_TRAINING=True,\n",
-    "        OUTPUT_TRAINING=\"mp3\",\n",
+    "        train(\n",
+    "            soundbank,\n",
+    "            net,\n",
+    "            input_feature=mmk.MultiScale(feature, net.frame_sizes, (*net.frame_sizes[:-1], 1)),\n",
+    "            target_feature=feature,\n",
+    "            root_dir=\"./trainings/srnn-lungs\",\n",
+    "            batch_size=16,\n",
+    "            batch_length=2048,\n",
+    "            oversampling=32,\n",
+    "            shift_error=0,\n",
+    "            tbptt_chunk_length=2048*8,    #(16000*8//512),\n",
+    "            max_epochs=1000,\n",
+    "            limit_train_batches=None,\n",
     "\n",
-    "        every_n_epochs=5,\n",
-    "        n_examples=4,\n",
-    "        prompt_length=16000,\n",
-    "        n_steps=int(12*(net.feature.sr)),\n",
-    "        temperature=torch.tensor([[1.51], [1.25], [1.05], [.95]]).repeat(1, int(12*(net.feature.sr))),\n",
-    "        trainset=id_\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f5d5683",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "h5m.AsSlice(shift=-16, length=16)(np.arange(32), 16)"
+    "#             max_lr=3e-4,\n",
+    "            max_lr=lr,\n",
+    "            betas=betas,\n",
+    "#             betas=(0.95, 0.95),\n",
+    "            div_factor=5.,\n",
+    "            final_div_factor=1.,\n",
+    "            pct_start=0.,\n",
+    "            cycle_momentum=False,\n",
+    "\n",
+    "            CHECKPOINT_TRAINING=True,\n",
+    "            MONITOR_TRAINING=True,\n",
+    "            OUTPUT_TRAINING=\"mp3\",\n",
+    "\n",
+    "            every_n_epochs=50,\n",
+    "            n_examples=6,\n",
+    "            prompt_length=16000,\n",
+    "            n_steps=int(12*(net.feature.sr)),\n",
+    "            temperature=torch.tensor([[1.25], [1.1], [1.], [.995], [.95], [.75]]).repeat(1, int(12*(net.feature.sr))),\n",
+    "            trainset=id_\n",
+    "        )"
    ]
   },
   {
@@ -121,6 +207,16 @@
    "metadata": {},
    "source": [
     "# Wavenets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36df84ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4**4"
    ]
   },
   {
@@ -137,60 +233,58 @@
     "\n",
     "#     soundbank = h5m.TypedFile(\"train.h5\", mode='r', keep_open=True)\n",
     "class GCPSoundBank(h5m.TypedFile):\n",
-    "    snd = from_gcloud(h5m.Sound(sr=22050, mono=True, normalize=True))\n",
+    "    snd = from_gcloud(h5m.Sound(sr=16000, mono=True, normalize=True))\n",
     "    \n",
     "    \n",
-    "for id_, s in COUGH.items():\n",
+    "for id_, s in LUNGS.items():\n",
     "#     if id_ != \"Verdi_X_3_bis\":\n",
     "#         continue\n",
     "    \n",
     "    GCPSoundBank.create(f\"train-2.h5\", s, parallelism=\"threads\", n_workers=8)\n",
     "    soundbank = GCPSoundBank(f\"train-2.h5\", mode='r', keep_open=True)\n",
     "    \n",
-    "    feature = mmk.Spectrogram(sr=soundbank.snd.attrs[\"sr\"],\n",
-    "                                n_fft=2048,\n",
-    "                                hop_length=512,\n",
-    "                                coordinate='mag',\n",
-    "                                center=False,\n",
-    "                                normalize=True)\n",
-    "    net = WaveNetFFT(\n",
-    "        feature=feature,\n",
-    "        input_heads=2,\n",
-    "        output_heads=2,\n",
-    "        scaled_activation=False,\n",
+    "#     feature = mmk.Spectrogram(sr=soundbank.snd.attrs[\"sr\"],\n",
+    "#                                 n_fft=2048,\n",
+    "#                                 hop_length=512,\n",
+    "#                                 coordinate='mag',\n",
+    "#                                 center=False,\n",
+    "#                                 normalize=True)\n",
+    "    feature = mmk.MuLawSignal(sr=16000,\n",
+    "                q_levels=256)\n",
+    "    net = WaveNetQx(\n",
+    "            feature=feature,\n",
+    "            mlp_dim=512,\n",
     "\n",
-    "        kernel_sizes=(2,),\n",
-    "        blocks=(2,),\n",
-    "        dims_dilated=(1024,),\n",
-    "        dims_1x1=(),\n",
-    "        residuals_dim=None,\n",
-    "        apply_residuals=False,\n",
-    "        skips_dim=None,\n",
-    "        groups=2,\n",
-    "        act_f=nn.Tanh(),\n",
-    "        act_g=nn.Sigmoid(),\n",
-    "        pad_side=0,\n",
-    "        stride=1,\n",
-    "        bias=True,\n",
+    "            kernel_sizes=(4, ),\n",
+    "            blocks=(4,),\n",
+    "            dims_dilated=(1024,),\n",
+    "            dims_1x1=(),\n",
+    "            residuals_dim=None,\n",
+    "            apply_residuals=False,\n",
+    "            skips_dim=None,\n",
+    "            groups=8,\n",
+    "            pad_side=0,\n",
+    "            stride=1,\n",
+    "            bias=True,\n",
     "    )\n",
-    "    net.use_fast_generate = False\n",
+    "    net.use_fast_generate = True\n",
     "\n",
     "    train(\n",
     "        soundbank,\n",
     "        net,\n",
-    "        root_dir=\"./trainings/wn-cough\",\n",
+    "        root_dir=\"./trainings/wn-lungs-qx\",\n",
     "        input_feature=feature,\n",
     "        target_feature=feature,\n",
-    "        batch_size=8,\n",
-    "        batch_length=16,\n",
-    "        downsampling=32,\n",
+    "        batch_size=16,\n",
+    "        batch_length=1024,\n",
+    "        downsampling=4,\n",
     "        shift_error=0,\n",
     "\n",
-    "        max_epochs=50,\n",
-    "        limit_train_batches=None,\n",
+    "        max_epochs=500,\n",
+    "        limit_train_batches=8000,\n",
     "\n",
     "        max_lr=5e-4,\n",
-    "        betas=(0.9, 0.95),\n",
+    "        betas=(0.92, 0.975),\n",
     "        div_factor=5.,\n",
     "        final_div_factor=1.,\n",
     "        pct_start=0.,\n",
@@ -200,91 +294,13 @@
     "        MONITOR_TRAINING=True,\n",
     "        OUTPUT_TRAINING=\"mp3\",\n",
     "\n",
-    "        every_n_epochs=10,\n",
-    "        n_examples=4,\n",
-    "        prompt_length=64,\n",
-    "        n_steps=int(16*(net.feature.sr//net.feature.hop_length)),\n",
-    "#         temperature=torch.tensor([[.85] * 200]),\n",
+    "        every_n_epochs=25,\n",
+    "        n_examples=8,\n",
+    "        prompt_length=256,\n",
+    "#         n_steps=int(6*(net.feature.sr//net.feature.hop_length)),\n",
+    "        n_steps=int(6*net.feature.sr),\n",
+    "        temperature=torch.tensor([[2.1], [1.95], [1.75], [1.5], [1.], [.9], [.5], [.0005]]).repeat(1, int(6*(net.feature.sr))),\n",
     "        trainset=id_\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5260607f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# for train_file in [*h5m.FileWalker(h5m.Sound.__re__, 'train-data/sounds')][2:]:\n",
-    "\n",
-    "#     h5m.sound_bank.callback(\"train.h5\", train_file, sr=22050,)\n",
-    "\n",
-    "#     soundbank = h5m.TypedFile(\"train.h5\", mode='r', keep_open=True)\n",
-    "\n",
-    "class GCPSoundBank(h5m.TypedFile):\n",
-    "    snd = from_gcloud(h5m.Sound(sr=44100, mono=True, normalize=True))\n",
-    "    \n",
-    "    \n",
-    "for id_, s in VERDI_X.items():\n",
-    "    if id_ != \"Verdi_X_3_bis\":\n",
-    "        continue\n",
-    "    \n",
-    "    GCPSoundBank.create(f\"train-2.h5\", s, parallelism=\"threads\", n_workers=8)\n",
-    "    soundbank = GCPSoundBank(f\"train-2.h5\", mode='r', keep_open=True)\n",
-    "    \n",
-    "    feature = mmk.Spectrogram(sr=soundbank.snd.attrs[\"sr\"],\n",
-    "                                n_fft=1024, hop_length=256,\n",
-    "                                coordinate='mag',\n",
-    "                                center=False,\n",
-    "                                normalize=True)\n",
-    "\n",
-    "    net = Seq2SeqLSTM(\n",
-    "        feature=feature,\n",
-    "        input_heads=1,\n",
-    "        output_heads=1,\n",
-    "        scaled_activation=False,\n",
-    "        model_dim = 256,\n",
-    "        num_layers = 1,\n",
-    "        n_lstm = 1,\n",
-    "        bottleneck = \"add\",\n",
-    "        n_fc = 1,\n",
-    "        hop = 4,\n",
-    "        weight_norm=False,\n",
-    "        with_tbptt=False,\n",
-    "    )\n",
-    "\n",
-    "    train(\n",
-    "        soundbank,\n",
-    "        net,\n",
-    "        input_feature=feature,\n",
-    "        target_feature=feature,\n",
-    "        root_dir=\"./trainings/verdi-x-3-bis\",\n",
-    "        batch_size=8,\n",
-    "        batch_length=4,\n",
-    "        shift_error=0,\n",
-    "        downsampling=32,\n",
-    "\n",
-    "        max_epochs=50,\n",
-    "        limit_train_batches=None,\n",
-    "\n",
-    "        max_lr=4e-4,\n",
-    "        betas=(0.9, 0.93),\n",
-    "        div_factor=5.,\n",
-    "        final_div_factor=1.,\n",
-    "        pct_start=0.,\n",
-    "        cycle_momentum=False,\n",
-    "\n",
-    "        CHECKPOINT_TRAINING=True,\n",
-    "        MONITOR_TRAINING=True,\n",
-    "        OUTPUT_TRAINING=\"mp3\",\n",
-    "\n",
-    "        every_n_epochs=10,\n",
-    "        n_examples=4,\n",
-    "        prompt_length=4,\n",
-    "        n_steps=int(12*(net.feature.sr//net.feature.hop_length) // net.hp.hop),\n",
     "    )"
    ]
   },
